add cabeludo, h1, h2, a href

--- a/index.html
+++ b/index.html
@@ -10,28 +10,41 @@
 <body>
     <header>
         <div class="img-header">
-            <img clas="lgo-cacheado" src="img/logo todecacho.png" alt="">
+            <img class="lgo-cacheado" src="img/logo todecacho.png" alt="">
         </div>
         <div class="list-header">
-            <ul>
-                <li>Dicas</li>
-                    <li>Cronograma Capilar</li>
-                    <li>Referências</li>
-                    <li>Produtos</li>
-                    <li>Cadastre-se</li>
-                    <li>Contato</li>
-            </ul>
+            <a class="link-header" href="https://www.google.com.br/">
+                <ul>
+                        <li>Dicas</li>
+                        <li>Cronograma Capilar</li>
+                        <li>Referências</li>
+                        <li>Produtos</li>
+                        <li>Cadastre-se</li>
+                        <li>Contato</li>
+                </ul>
+            </a>
         </div>
         <div id="divBusca">
             <input type="text" id="txtBusca" placeholder="Buscar..."/>
             <img class="lupa" src="img/Layer_3.svg" id="btnBusca" alt="Buscar"/>
         </div>
         <div class="redes-socias">
-            <img src="img/icon face bol.svg" alt>
-            <img src="img/icon insta bol.svg">
-            <img src="img/icon youtube bol.svg">
+            <a class="link-img" href="e">
+                <img class="logo-redes" src="img/icon face bol.svg" alt></a>
+            <a class="link-img" href="s">
+                <img class="logo-redes" src="img/icon insta bol.svg"></a>
+            <a class="link-img" href="q">
+                <img class="logo-redes" src="img/icon youtube bol.svg"></a>
           </div>
-    </header>
+        </header>
+        <div class="cabeludo">
+            <div class="title">
+                <h1>Dicas e Truques</h1>
+
+            </div>
+            <div class="sub-title">
+                <h2>De quem sabe muito sobre cabelos crespos</h2>
+            </div>
+        </div>
 </body>
 </html>
-<!-- <section class="conteudo-header">  -->
