ajutastando a header e add fundo roxo

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
                 </ul>
             </a>
         </div>
-        <div id="divBusca">
-            <input type="text" id="txtBusca" placeholder="Buscar..."/>
-            <img class="lupa" src="img/Layer_3.svg" id="btnBusca" alt="Buscar"/>
-        </div>
+        <section class="barra-buscar">
+            <div id="divBusca">
+                <img class="lupa" src="img/Layer_3.svg" id="btnBusca" alt="Buscar"/>
+                <input type="text" id="txtBusca" placeholder="Buscar..."/>
+            </div>
+        </section>
         <div class="redes-socias">
             <a class="link-img" href="e">
                 <img class="logo-redes" src="img/icon face bol.svg" alt></a>
@@ -43,8 +45,18 @@
 
             </div>
             <div class="sub-title">
-                <h2>De quem sabe muito sobre cabelos crespos</h2>
+                <h2 class="subtitle-cabeludo">De quem sabe muito sobre cabelos crespos</h2>
             </div>
         </div>
+        <main>
+            <section class="fundo-roxo">
+                <div class="text-main">
+                    <h2 class="title-main">7 passos para se apaixonar pelo seu cabelo crespo natural</h2>
+                </div>
+                <div class="paragraph-main">
+                    <p class="paragraph-motivacional">Sabemos que a jornada para a aceitação do cabelo crespo natural é longa e nada fácil de trilhar. Afinal, é difícil se libertar das amarras e aprender a se amar depois de anos vivendo em uma sociedade preconceituosa que reprime as características mais comuns do ser humano, como a textura do seu cabelo. Se você está disposta a se aventurar nesse caminho de autoconhecimento e aceitação, vem com a gente! E um segredo: não precisa ter medo!</p>
+                </div>
+            </section>
+        </main>
 </body>
 </html>
