--- a/index.html
+++ b/index.html
@@ -55,14 +55,39 @@
                     <h2 class="title-main">7 passos para se apaixonar pelo seu cabelo crespo natural</h2>
                 </div>
                 <div class="paragraph-main">
-                    <p class="paragraph-motivacional">Sabemos que a jornada para a aceitação do cabelo crespo natural é longa e nada fácil de trilhar. Afinal, é difícil se libertar das amarras e aprender a se amar depois de anos vivendo em uma sociedade preconceituosa que reprime as características mais comuns do ser humano, como a textura do seu cabelo. Se você está disposta a se aventurar nesse caminho de autoconhecimento e aceitação, vem com a gente! E um segredo: não precisa ter medo!</p>
+                    <p class="paragraph-motivacional">Sabemos que a jornada para a aceitação do cabelo crespo natural é longa e nada fácil de trilhar.</p>
+                    <p class="paragraph-motivacional">Afinal, é difícil se libertar das amarras e aprender a se amar depois de anos vivendo em uma sociedade preconceituosa que reprime as características mais comuns do ser humano, como a textura do seu cabelo. Se você está disposta a se aventurar nesse caminho de autoconhecimento e aceitação, vem com a gente! E um segredo: não precisa ter medo!</p>
                 </div>
             </section>
             <section class="espelho">
-                <img class="no-espelho" src="img/cabelo no espelho.png" alt="">
-                <div class="text-espelho">
-                    <h2 class="title-espelho">1. Olhe para o espelho e toque no seu cabelo</h2>
-                    <p class="paragraph-espelho">Olhando para o espelho, toque no seu cabelo com carinho, veja como é macio, totalmente diferente do que a sociedade fez você acreditar por toda a sua vida. Afinal, não é porque a sua textura é diferente do liso, que ele é duro, feio… Toque nele sem julgamentos e você vai sentir. Vai perceber que essa textura inclusive é incrível para penteados. Você já viu quanto penteados incríveis dá para fazer com o seu cabelo crespo? E o volume, então!? De invejar… É lindo e cheio de poder. É como coroa que nasceu com você.</p>
+                <div class="conteudo-espelho">
+                    <div class="container-espelho">
+                        <img class="no-espelho" src="img/cabelo no espelho.png" alt="">
+                    </div>
+                    <div class="text-espelho">
+                        <h2 class="title-espelho">1. Olhe para o espelho e toque no seu cabelo</h2>
+                        <p class="paragraph-espelho">Olhando para o espelho, toque no seu cabelo com carinho, veja como é macio, totalmente diferente do que a sociedade fez você acreditar por toda a sua vida.</p>
+                        <p class="paragraph-espelho">Afinal, não é porque a sua textura é diferente do liso, que ele é duro, feio…</p>
+                        <p class="paragraph-espelho">Toque nele sem julgamentos e você vai sentir.</p> 
+                        <p class="paragraph-espelho">Vai perceber que essa textura inclusive é incrível para penteados.</p>
+                        <p class="paragraph-espelho">Você já viu quanto penteados incríveis dá para fazer com o seu cabelo crespo? E o volume, então!? De invejar… É lindo e cheio de poder. É como coroa que nasceu com você.</p>
+                    </div>
+                </div>
+                <div class="referencias">
+                    <div class="img-referencias">
+                        <img class="referencias-img" src="img/NoPath - Copia (18).png" alt="">
+                    </div>
+                    <div class="text-referencias">
+                        <h3 class="title-refe">2. Tenha referências</h3>
+                        <p class="paragraph-refe">Que tal parar de tentar se encaixar em padrões menores que você?</p>
+                        <p class="texts-refe">O que a sociedade diz que é bonito, não importa, você é maior do que isso.</p>
+                        <p class="texts-refe">Já pensou que chato todo mundo igual?</p>
+                        <p class="texts-refe">Já pensou que chato todo mundo igual?</p>
+                        <p class="texts-refe"> Procure se inspirar em pessoas semelhantes. </p>
+                        <p class="texts-refe">Com o corpo parecido, tom de pele similar e um cabelo crespo, como o seu…</p>
+                        <p class="texts-refe">Mas não igual ao seu, porque você é única.</p>
+                        <p class="texts-refe">Se inspire nessas pessoas, pessoas que você admira, mas não se esqueça de que você é tão incrível quanto elas, do jeitinho que você é.</p>
+                    </div>
                 </div>
             </section>
         </main>
