add conteudo na main e ajustando com flexbox

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -16,12 +15,12 @@
         <div class="list-header">
             <a class="link-header" href="https://www.google.com.br/">
                 <ul>
-                        <li>Dicas</li>
-                        <li>Cronograma Capilar</li>
-                        <li>Referências</li>
-                        <li>Produtos</li>
-                        <li>Cadastre-se</li>
-                        <li>Contato</li>
+                        <li class="header-li">Dicas</li>
+                        <li class="header-li">Cronograma Capilar</li>
+                        <li class="header-li">Referências</li>
+                        <li class="header-li">Produtos</li>
+                        <li class="header-li">Cadastre-se</li>
+                        <li class="header-li">Contato</li>
                 </ul>
             </a>
         </div>
@@ -52,7 +51,7 @@
         <main>
             <section class="fundo-roxo">
                 <div class="text-main">
-                    <h2 class="title-main">7 passos para se apaixonar pelo seu cabelo crespo natural</h2>
+                    <h3 class="title-main">7 passos para se apaixonar pelo seu cabelo crespo natural</h2>
                 </div>
                 <div class="paragraph-main">
                     <p class="paragraph-motivacional">Sabemos que a jornada para a aceitação do cabelo crespo natural é longa e nada fácil de trilhar.</p>
@@ -65,7 +64,7 @@
                         <img class="no-espelho" src="img/cabelo no espelho.png" alt="">
                     </div>
                     <div class="text-espelho">
-                        <h2 class="title-espelho">1. Olhe para o espelho e toque no seu cabelo</h2>
+                        <h3 class="title-espelho">1. Olhe para o espelho e toque no seu cabelo</h2>
                         <p class="paragraph-espelho">Olhando para o espelho, toque no seu cabelo com carinho, veja como é macio, totalmente diferente do que a sociedade fez você acreditar por toda a sua vida.</p>
                         <p class="paragraph-espelho">Afinal, não é porque a sua textura é diferente do liso, que ele é duro, feio…</p>
                         <p class="paragraph-espelho">Toque nele sem julgamentos e você vai sentir.</p> 
@@ -89,7 +88,75 @@
                         <p class="texts-refe">Se inspire nessas pessoas, pessoas que você admira, mas não se esqueça de que você é tão incrível quanto elas, do jeitinho que você é.</p>
                     </div>
                 </div>
+                <div class="detalhes">
+                    <div class="conteudo-detalhes">
+                        <img class="det" src="img/NoPath - Copia (19).png" alt="">
+                    </div>
+                    <div class="text-detalhe">
+                        <h3 class="title-detalhe">3. Seja amável com seus detalhes</h2>
+                        <p>Sabe aquele frizz que você tenta esconder?</p>
+                        <p>Quem disse que eles são feios? </p>
+                        <p>E quem são “eles” para dizer o que quer que seja?</p>
+                        <p>O seu volume, o seu frizz, são parte de você.</p>
+                        <p>Use-os ao seu favor, tente enxergar cada detalhe do seu cabelo com carinho.</p>
+                    </div>
+                </div>
+                <div class="opinioes">
+                    <div class="conteudo-opinioes">
+                        <img class="opn" src="img/NoPath - Copia (49).png">
+                    </div>
+                    <div class="text-opinioes">
+                        <h3 class="title-opn">4. Ignore as opiniões alheias</h2>
+                        <p>Ouvir a opinião dos outros, principalmente as</p>
+                        <p>negativas, nunca levou ninguém a lugar nenhum.</p>
+                        <p>A sociedade é cruel e algumas pessoas também.</p>
+                        <p>Não se deixe levar por pessoas que só conseguem</p>
+                        <p>enxergar olhando de dentro de uma caixinha</p>
+                        <p>muito pequena para um mundo grande, lindo e cheio de diversidade.</p>
+                        <p>Levante a cabeça, balance o seu cabelo e saia da caixa porque o mundo é seu!</p>
+                    </div>
+                </div>
+                <div class="raizes">
+                    <div class="conteudo-raizes">
+                        <img class="rzs" src="img/NoPath - Copia (55).png">
+                    </div>
+                    <div class="text-raizes">
+                        <h3 class="title-raizes">5. Procure suas raízes</h2>
+                        <p>Passar pela transição é uma das formas de encontrar as suas raízes, aquelas literais. Mas também é a porta de entrada para que você procure a sua ancestralidade, sua origem.</p>
+                        <p>Toda a história que conta porque você tem esse cabelo crespo.</p>
+                        <p>A sua história e a de tantas outras pessoas formam uma história só.</p>
+                        <p>Esta é cheia de luta e resistência.</p>
+                        <p>Então resista a todos que quiserem te colocar para baixo nessa jornada e se apegue a como a sua história é linda e cheia de força.</p>
+                    </div>
+                </div>
+                <div class="fases">
+                    <div class="conteudo-fases">
+                        <img class="img-fases" src="img/NoPath - Copia (56).png">
+                    </div>
+                    <div class="text-fases">
+                        <h3 class="title-fases">6. Respeite suas fases</h2>
+                        <p> Você não precisa ter aquele cabelo enorme e super volumoso.</p>
+                        <p>Um cabelo crespo curto também é lindo, assim como o médio, aquele com duas texturas, durante a transição… </p>
+                        <p>Todos esses cabelos são seus, todos importantes e lindos a sua maneira.</p>
+                        <p>Respeite as fases do seu cabelo natural crespo e lembre-se que tudo passa, por mais difícil que seja a situação.</p>
+                    </div>
+                </div>
+                <div class="orgulho">
+                    <div class="conteudo-orgulho">
+                        <img class="img-orgulho" src="img/NoPath - Copia (57).png">
+                    </div>
+                    <div class="text-orgulho">
+                    <h3 class="title-orgulho">7. Tenha orgulho dele</h2>
+                    <p>Se você chegou até aqui, é porque enfrentou uma sociedade inteira, entrou em uma luta difícil consigo mesma(o), mas aprendeu a enxergar toda a beleza que você carrega aí, no topo da sua cabeça. Agora que você conquistou e ama esse seu cabelo crespo natural, carregue-o com orgulho! Ele merece e você também!</p>
+                    </div> 
+                </div>
+                <div class="caminho">
+                    <div class="conteudo-caminho">
+                        <img class="img-caminho" src="img/Caminho 9.svg">
+                    </div>
+                </div>
             </section>
         </main>
 </body>
 </html>
+    
