ajustando tela pra 1440 x 899

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
     <title>Crespos</title>
 </head>
 <body>
@@ -24,12 +26,6 @@
                 </ul>
             </a>
         </div>
-        <section class="barra-buscar">
-            <div id="divBusca">
-                <img class="lupa" src="img/Layer_3.svg" id="btnBusca" alt="Buscar"/>
-                <input type="text" id="txtBusca" placeholder="Buscar..."/>
-            </div>
-        </section>
         <div class="redes-socias">
             <a class="link-img" href="e">
                 <img class="logo-redes" src="img/icon face bol.svg" alt></a>
@@ -39,11 +35,11 @@
                 <img class="logo-redes" src="img/icon youtube bol.svg"></a>
           </div>
         </header>
-        <div class="cabeludo">
-            <div class="title">
-                <h1>Dicas e Truques</h1>
+    <div class="cabeludo">
+        <div class="title">
+            <h1>Dicas e Truques</h1>
 
-            </div>
+        </div>
             <div class="sub-title">
                 <h2 class="subtitle-cabeludo">De quem sabe muito sobre cabelos crespos</h2>
             </div>
@@ -157,6 +153,10 @@
                 </div>
             </section>
         </main>
+        <footer>
+
+
+        </footer>
 </body>
 </html>
     
