--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="sub-title">
                 <h2 class="subtitle-cabeludo">De quem sabe muito sobre cabelos crespos</h2>
             </div>
-        </div>
+    </div>
         <main>
             <section class="fundo-roxo">
                 <div class="text-main">
@@ -152,10 +152,48 @@
                     </div>
                 </div>
             </section>
+            <section class="final-main">
+                <div class="imgs-final">
+                    <img src="img/NoPath - Copia (52).png">
+                    <img src="img/gloriamaria.png">
+                </div>
+                <div class="imgs-final">
+                    <img src="img/NoPath - Copia (54).png">
+                    <img src="img/NoPath - Copia (53).png">
+                    <img src="img/NoPath - Copia (14).png">    
+                </div>
+                <div class="imgs-final">
+                    <img src="img/NoPath - Copia (11).png">
+                    <img src="img/cabelo snoopydog.png">
+                </div>
+                <div class="imgs-final">
+                    <img src="img/NoPath - Copia (10).png">
+                </div>
+                <div class="imgs-final">
+                    <img src="img/NoPath - Copia (12).png">
+                    <img src="img/NoPath - Copia (9).png">
+                </div>
+            </section>
         </main>
         <footer>
-
-
+            <div class="text-footer">
+                <p>Layout produzido por Vai na Web para fins exclusivamente educacionais.</P> 
+                <p>Referência: https://br.pinterest.com/pin/464644886562532897/ e https://todecacho.com.br/cabelo-crespo-natural/</p>
+            </div>
+            <div class="menu-footer">
+                <a href="https://leonaminacio.github.io/Projeto-Crespos/">
+                    <img class="imgs-footer" src="img/Grupo 7.svg">
+                    página anterior
+                </a>
+                <a href="https://leonaminacio.github.io/Projeto-Crespos/">
+                    <img class="imgs-footer" src="img/Grupo 5.svg">
+                    voltar ao topo
+                </a>
+                <a href="https://leonaminacio.github.io/Projeto-Crespos/">
+                    <img class="imgs-footer" src="img/Grupo 6.svg">
+                    próxima página
+                </a>
+            </div>
         </footer>
 </body>
 </html>
