--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                 </ul>
             </a>
         </div>
+        <section class="barra-buscar">
+            <div id="divBusca">
+                <img class="lupa" src="img/Layer_3.svg" id="btnBusca" alt="Buscar"/>
+                <input type="text" id="txtBusca" placeholder="Buscar..."/>
+            </div>
+        </section>
         <div class="redes-socias">
             <a class="link-img" href="e">
                 <img class="logo-redes" src="img/icon face bol.svg" alt></a>
@@ -148,30 +154,30 @@
                 </div>
                 <div class="caminho">
                     <div class="conteudo-caminho">
-                        <img class="img-caminho" src="img/Caminho 9.svg">
+                        <img class="caminho-img" src="img/Caminho 9.svg">
                     </div>
                 </div>
             </section>
             <section class="final-main">
                 <div class="imgs-final">
-                    <img src="img/NoPath - Copia (52).png">
-                    <img src="img/gloriamaria.png">
+                    <img class="final-imgs" src="img/NoPath - Copia (52).png">
+                    <img class="final-imgs" src="img/gloriamaria.png">
                 </div>
                 <div class="imgs-final">
-                    <img src="img/NoPath - Copia (54).png">
-                    <img src="img/NoPath - Copia (53).png">
-                    <img src="img/NoPath - Copia (14).png">    
+                    <img class="final-imgs" src="img/NoPath - Copia (54).png">
+                    <img class="final-imgs" src="img/NoPath - Copia (53).png">
+                    <img class="final-imgs" src="img/NoPath - Copia (14).png">    
                 </div>
                 <div class="imgs-final">
-                    <img src="img/NoPath - Copia (11).png">
-                    <img src="img/cabelo snoopydog.png">
+                    <img class="final-imgs" src="img/NoPath - Copia (11).png">
+                    <img class="final-imgs" src="img/cabelo snoopydog.png">
                 </div>
                 <div class="imgs-final">
-                    <img src="img/NoPath - Copia (10).png">
+                    <img class="final-imgs" src="img/NoPath - Copia (10).png">
                 </div>
                 <div class="imgs-final">
-                    <img src="img/NoPath - Copia (12).png">
-                    <img src="img/NoPath - Copia (9).png">
+                    <img class="final-imgs" src="img/NoPath - Copia (12).png">
+                    <img class="final-imgs" src="img/NoPath - Copia (9).png">
                 </div>
             </section>
         </main>
@@ -197,4 +203,3 @@
         </footer>
 </body>
 </html>
-    
