--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                 </ul>
             </a>
         </div>
+        <div class="menu-lateral">
+            <input type="checkbox" id="checkbox-menu">
+            <label for="checlbox-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+        </div>
         <section class="barra-buscar">
             <div id="divBusca">
                 <img class="lupa" src="img/Layer_3.svg" id="btnBusca" alt="Buscar"/>
@@ -183,7 +191,7 @@
         </main>
         <footer>
             <div class="text-footer">
-                <p>Layout produzido por Vai na Web para fins exclusivamente educacionais.</P> 
+                <p class="paragraph-footer">Layout produzido por Vai na Web para fins exclusivamente educacionais.</P> 
                 <p>Referência: https://br.pinterest.com/pin/464644886562532897/ e https://todecacho.com.br/cabelo-crespo-natural/</p>
             </div>
             <div class="menu-footer">
