--- a/index.html
+++ b/index.html
@@ -26,14 +26,42 @@
                 </ul>
             </a>
         </div>
-        <div class="menu-lateral">
-            <input type="checkbox" id="checkbox-menu">
-            <label for="checlbox-menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </label>
-        </div>
+        <div class="menu-hamburguer">
+            <input type="checkbox" id="check">
+  <label id="icone" for="check"></label>
+  <div class="barra">
+    <nav>
+      <a href="#">
+        <div class="Link">Dicas</div>
+      </a>
+      <a href="#">
+        <div class="Link">Cronograma</div>
+      </a>
+      <a href="#">
+        <div class="Link">Referências</div>
+      </a>
+      <a href="#">
+        <div class="Link">Produtos</div>
+      </a>
+      <a href="#">
+        <div class="Link">Cadastre-se</div>
+      </a>
+      <a href="#">
+        <div class="Link">Contato</div>
+      </a>
+    </nav>
+  </div>
+  <!-- barra fixa azul horizontal -->
+
+  <nav class="menu">
+    </a>
+  </nav>
+
+  <label for="menu-hamburguer">
+    <div class="mburg">
+      <span class="hamburguer"></span>
+    </div>
+  </label>
         <section class="barra-buscar">
             <div id="divBusca">
                 <img class="lupa" src="img/Layer_3.svg" id="btnBusca" alt="Buscar"/>
@@ -68,7 +96,7 @@
                     <p class="paragraph-motivacional">Afinal, é difícil se libertar das amarras e aprender a se amar depois de anos vivendo em uma sociedade preconceituosa que reprime as características mais comuns do ser humano, como a textura do seu cabelo. Se você está disposta a se aventurar nesse caminho de autoconhecimento e aceitação, vem com a gente! E um segredo: não precisa ter medo!</p>
                 </div>
             </section>
-            <section class="espelho">
+            <section class="fotos">
                 <div class="conteudo-espelho">
                     <div class="container-espelho">
                         <img class="no-espelho" src="img/cabelo no espelho.png" alt="">
@@ -190,24 +218,49 @@
             </section>
         </main>
         <footer>
-            <div class="text-footer">
-                <p class="paragraph-footer">Layout produzido por Vai na Web para fins exclusivamente educacionais.</P> 
-                <p>Referência: https://br.pinterest.com/pin/464644886562532897/ e https://todecacho.com.br/cabelo-crespo-natural/</p>
-            </div>
-            <div class="menu-footer">
-                <a href="https://leonaminacio.github.io/Projeto-Crespos/">
-                    <img class="imgs-footer" src="img/Grupo 7.svg">
-                    página anterior
-                </a>
-                <a href="https://leonaminacio.github.io/Projeto-Crespos/">
-                    <img class="imgs-footer" src="img/Grupo 5.svg">
-                    voltar ao topo
-                </a>
-                <a href="https://leonaminacio.github.io/Projeto-Crespos/">
-                    <img class="imgs-footer" src="img/Grupo 6.svg">
-                    próxima página
-                </a>
-            </div>
+            <section class="box-footer">
+                <div class="text-footer">
+                    <p class="paragraph-footer">Layout produzido por Vai na Web para fins exclusivamente educacionais.</p> 
+                    <p>Referência: https://br.pinterest.com/pin/464644886562532897/ e https://todecacho.com.br/cabelo-crespo-natural/</p>
+                </div>
+                <div class="menu-footer">
+                    <a href="https://leonaminacio.github.io/Projeto-Crespos/">
+                        <img class="imgs-footer" src="img/Grupo 7.svg">
+                        página anterior</a>
+                    <a href="https://leonaminacio.github.io/Projeto-Crespos/">
+                        <img class="imgs-footer" src="img/Grupo 5.svg">
+                        voltar ao topo</a>
+                    <a href="https://leonaminacio.github.io/Projeto-Crespos/">
+                        <img class="imgs-footer" src="img/Grupo 6.svg">
+                        próxima página
+                    </a>
+                </div>
+                <div class="setas">
+                    <div class="primeira-seta">
+                        <a href="https://leonaminacio.github.io/Projeto-Crespos/">
+                        <img class="seta-reponsivo" src="img/Grupo 7.svg"></a>
+                    </div>
+                <div class="segunda-seta">
+                    <a href="https://leonaminacio.github.io/Projeto-Crespos/">
+                        <img class="seta-dois" src="img/Grupo 5.svg"></a>
+                </div>
+                <div class="terceira-seta">
+                    <a href="https://leonaminacio.github.io/Projeto-Crespos/">
+                        <img class="seta-dois" src="img/Grupo 6.svg"></a>
+                    </div>
+                    <div class="paginas">
+                        <a class="link-img" href="e">
+                            <img class="logo-redes" src="img/icon face bol.svg" alt></a>
+                            <a class="link-img" href="s">
+                                <img class="logo-redes" src="img/icon insta bol.svg"></a>
+                            <a class="link-img" href="q">
+                                <img class="logo-redes" src="img/icon youtube bol.svg"></a>
+                        </div>
+                    </div>
+                </section>
         </footer>
 </body>
 </html>
+
+    
+        
